fixed flex-wrap in display tools

--- a/src/components/work/work.css
+++ b/src/components/work/work.css
@@ -183,6 +183,8 @@
     flex-direction: row;
     justify-content: flex-start;
     column-gap: 6px;
+    flex-wrap: wrap;
+    row-gap: 7px;
 }
 
 .display-tools > div {
